@@ -1,10 +1,17 @@
 package net.mandaria.radioreddit.activities;
 
 import net.mandaria.radioreddit.R;
+import net.mandaria.radioreddit.RadioRedditApplication;
+import net.mandaria.radioreddit.apis.RedditAPI;
+import net.mandaria.radioreddit.tasks.LoginRedditTask;
 import android.app.Activity;
 import android.os.Build;
 import android.os.Bundle;
+import android.view.View;
 import android.view.Window;
+import android.view.View.OnClickListener;
+import android.widget.Button;
+import android.widget.EditText;
 
 import com.flurry.android.FlurryAgent;
 
@@ -12,6 +19,7 @@ public class Login extends Activity
 {
 	
 	private int sdkVersion = 0;
+	Button btn_login;
 	
 	@Override
 	protected void onCreate(Bundle savedInstanceState)
@@ -31,6 +39,22 @@ public class Login extends Activity
 		
 		super.onCreate(savedInstanceState);
 		setContentView(R.layout.login);
+		
+		btn_login = (Button) findViewById(R.id.btn_login);
+		btn_login.setOnClickListener(new OnClickListener()
+		{
+			@Override
+			public void onClick(View v)
+			{
+				EditText txt_username = (EditText)findViewById(R.id.txt_username);
+				EditText txt_password = (EditText)findViewById(R.id.txt_password);
+				
+				String username = txt_username.getText().toString();
+				String password = txt_password.getText().toString();
+				
+				new LoginRedditTask((RadioRedditApplication)Login.this.getApplication(), Login.this, username, password).execute();
+			}
+		});
 	}
 	
 	@Override
