@@ -1,0 +1,9 @@
+package net.mandaria.radioreddit.objects;
+
+public class RedditAccount
+{
+	public String Username;
+	public String Cookie;
+	public String Modhash;
+	public String ErrorMessage;
+}
